# power-monitoring

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Filter.py  README.md  classify_image.py  cluster-remote.py  dhcpcd.conf  docker-compose.yml  init.sh  install.yaml  inventory  inventory.example  multi-client-cluster.py  override.conf  remote-api.conf  requirements.txt  run-md5.py  sendRequest.py  setup-p2.sh  setup.sh  trigger
2018-team/: README.md
2019-team/: Readme.md
2020-team/: LICENSE
2020-team/ansible/: ansible_install_Test_programs.yaml  ansible_install_fftw.yaml  installClient.yaml  installG.yaml
2020-team/client/: CMakeLists.txt
2020-team/gnuplot/: pi0all.p  pi1all.p  pi2all.p  (+5 more)
Ansible/: bootstrap.retry  bootstrap.yml  hosts  installDeb.retry  installDeb.yml
CurrentMeasurement/: main.py  metric_INA219.py  prometheus_filter.py
FFT/: CMakeLists.txt  main.cpp
FFTW/: CMakeLists.txt  graycm.txt  main  main.cpp  samples.h
FFTW-mpi/: machinefile
Monasca_agent/: agent.py  agent.yaml
Scripts/: ansible.sh
Test programs/: Readme.md
Test_programs/: Readme.md
Visualisation/: __main__.py
ansible/: ansible_install_Test_programs.yaml  ansible_install_fftw.yaml  install_fftw.yaml
bitmap-master/: graycm.txt  grayfile.txt  grayscale.py  readgray.py  scan.cpp  testfile.cpp  your_file.txt
config/: metricbeat.yml  prometheus.yml
coral-classification-detection/: classify_image.py  classify_video.py  detect_image.py  detect_video.py
data/: metric_ina.py
docker-cluster/: README.md
docs/: algorithm.toc  installClient.yaml  installG.yaml
documentatie/: installG.yaml
gnuplot/: pcurrentpi1-4.p  pi0all.p  pi1all.p  pi2all.p  pi3all.p  pigall.p  ppowerpi1-4.p  ptemppi1-4.p  pvoltagepi1-4.p
ina260/: CMakeCache.txt  CMakeLists.txt  Makefile  client  client.cpp  client2  cmake_install.cmake  i2cscan.py  ina260.cbp  inasimpletest.py  logger.cpp  logger.hpp  maindata.cpp  mainserver.cpp  pis.xml  server  server.cpp  server2  test  test.cpp
ina260/ina260/lib/: logos.lbr
ina260/pcb/: INA260_SFS.brd  INA260_SFS.sch
ina260/src/: I2CDevice.cpp  I2CDevice.hpp  client.cpp  client.hpp  inaDevice.cpp  inaDevice.hpp  logger.cpp  logger.hpp  main.cpp  maindata.cpp  mainserver.cpp  server.cpp  server.hpp  temperatureLogger.cpp  temperatureLogger.hpp
metricbeat/: metricbeat.yml
verslag/: algorithm.aux  algorithm.bbl  algorithm.blg  algoritme.aux  algoritme.blg  algoritme.tex  algoritme.toc  bibliography.bib
(+129 files in other folders)
